[gd_scene load_steps=5 format=3 uid="uid://8j32ello7u56"]

[ext_resource type="Script" path="res://scenes/menu_screen.gd" id="1_8wkod"]
[ext_resource type="StyleBox" uid="uid://bmyh6yvafukya" path="res://assets/button_style.tres" id="2_7fp35"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_m4x5d"]
noise_type = 3
frequency = 0.4329

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_fo83u"]
noise = SubResource("FastNoiseLite_m4x5d")

[node name="MenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8wkod")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_fo83u")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContinue" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ButtonNewGame")
focus_next = NodePath("../ButtonNewGame")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("2_7fp35")
text = "Continue"

[node name="ButtonNewGame" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ButtonContinue")
focus_neighbor_bottom = NodePath("../ButtonQuit")
focus_next = NodePath("../ButtonQuit")
focus_previous = NodePath("../ButtonContinue")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("2_7fp35")
text = "New game"

[node name="ButtonQuit" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ButtonNewGame")
focus_previous = NodePath("../ButtonNewGame")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("2_7fp35")
text = "Quit"

[connection signal="focus_entered" from="TextureRect/VBoxContainer/ButtonContinue" to="." method="_on_button_continue_focus_entered"]
[connection signal="pressed" from="TextureRect/VBoxContainer/ButtonContinue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/ButtonNewGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
